# AniWell

./: .env.development  .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitignore  .prettierignore  .prettierrc.cjs  .prettierrc.js  Cargo.toml  README.md  components.d.ts  devB.vite.config.ts  electron-builder.json  electron-builder.json5  electron-builder.yml  electron.vite.config.ts  index.html  index.js  jsconfig.json  main.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  tsconfig.template.json  tsconfig.web.json  vite.config.ts  webpack.config.js
.cargo/: config.toml
.github/workflows/: release.yml
apps/: tsconfig.json
apps/backend-express/: package.json  stats.html  tsconfig.json  vite.config.ts
apps/frontend-vue/: README.md  index.html  package.json  stats.html  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/launcher-electron/: .env.development  .eslintrc.cjs  .npmrc  dev-app-update.yml  electron-builder.json  electron.vite.config.ts  package.json  tailwind.config.js  tsconfig.node.json  tsconfig.web.json
documents/: Linux版安装说明.md  Windows版安装说明.md  通用CORE版安装说明.md
electron/main/: index.ts
electron/preload/: index.ts
electron/server/: index copy.ts  index.ts
plugins/esmServer/: index.ts
public/: libassjs-worker.js
scripts/utils/: index.ts
src/: App.vue  auto-imports.d.ts  components.d.ts  main.js  main.ts  server.js
src-backend/: Cargo.toml
src-backend/src/: lib.rs  main.rs
src-backend/src/routes/: mod.rs
src-backend/src/routes/v1/: mod.rs
src-backend/src/routes/v1/users/: mod.rs
src-backend/src/structs/: mod.rs  state.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/api/: index.ts  old.ts  request.ts
src/config/: log4js.json
src/hooks/: useElementSize.ts  useListenLifecycle.ts
src/main/: index.ts
src/preload/: index.ts
src/renderer/: index.html
src/router/: index.ts
src/routes/: index.ts
src/server/: env.d.ts  index.ts
src/stores/: global.ts  item.ts  library.ts  settings.ts  videoPlayer.ts
utils/: index.ts
(+397 files in other folders)
