[package]
name = "ani-well-backend"
version = { workspace = true }
edition = { workspace = true }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ani_well_backend_lib"
crate-type = ["rlib", "dylib"]

[dependencies]
sea-orm = { version = "1.1.0", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "with-json",
    "with-uuid",
    "with-time",
    "macros",
] }
axum = "0.7.7"
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
