[package]
name = "ani-well-tauri"
version = { workspace = true }
description = "ani-well-tauri"
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ani_well_tauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
serde = "1.0.203"
serde_json = "1.0.117"
tauri = { version = "2.0.0-beta", features = [] }
ani-well-backend = { path = "../src-backend" }
